--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "estreact",
+  "name": "testreact",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://simonacatrini.github.io/testreact/",
